# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  GLLog.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  README.md  ShaderUtil.cpp  ShaderUtil.h  Vertex.h  main.cpp
GameEngine/: Camera.cpp  Camera.h  Component.cpp  Component.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Primitives.cpp  Primitives.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Time.cpp  Time.h  UpdateInfo.h  Vertex.h
GameEngine/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h
GameEngineTest/: CustomComponent.cpp  CustomComponent.h  TestScene.cpp  TestScene.h
OpenGLPlayground/: Camera.cpp  Camera.h  GLLog.cpp  GLLog.h  IScene.h  OpenGLPlayground.sln  OpenGLPlayground.vcxproj  OpenGLPlayground.vcxproj.filters  ShaderUtil.cpp  ShaderUtil.h  SolidSphere.h  WarpTest.cpp  WarpTest.h  main.cpp  packages.config
OpenGLPlayground/Scenes/: SphereScene.cpp  SphereScene.h  WarpTest.cpp  WarpTest.h  WorldScene.cpp  WorldScene.h
OpenGLPlayground/Shaders/: FragmentShader.frag  FragmentShader2.frag  SphereVertexShader.vert  VertexShader.vert  WorldVertexShader.vert
Scenes/: HeightMapScene.cpp  HeightMapScene.h  WarpTest.cpp  WorldScene.cpp  WorldScene.h
Shaders/: BasicFragmentShader.frag  BasicVertexShader.vert  FragmentShader.frag  FragmentShader2.frag  TexturedShader.frag  TexturedShader.vert  VertexShader.vert
